--- a/src/components/Select.scss
+++ b/src/components/Select.scss
@@ -3,7 +3,6 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    padding: 0 15px;
     line-height: 1;
     gap: 5px;
     background: transparent;
